# Physical-AI-and-Humanoid-Robotics-Textbook

./: .gitignore  README.md  commit_message.txt  requirements.txt
.claude/: settings.local.json
book/docs/module1-ros2/: 01-ros2-nervous-system-intro.md  02-setting-up-ros2-workspace.md  03-creating-ros2-nodes.md  _category_.json
book/docs/module2-digital-twin/: 01-digital-twin-intro.md  02-setting-up-gazebo-simulation.md  03-sensor-simulation.md  _category_.json
history/prompts/1-humanoid-robotics-book/: 1-ros2-nervous-system-implementation.tasks.prompt.md  2-digital-twin-implementation.tasks.prompt.md
history/prompts/constitution/: 0001-initialize-project-constitution.constitution.prompt.md
history/prompts/general/: 1-specification-analysis-report.general.prompt.md  20251206-0001-failed-to-implement-feature-missing-spec.general.prompt.md  20251207-0001-generate-plans.plan.prompt.md  (+1 more)
labs/module1-ros2/: run_tests.sh
labs/module4-vla-robotics/: README.md  run_tests.py
labs/module4-vla-robotics/vla_agent/: package.xml  setup.py
labs/module4-vla-robotics/vla_agent/launch/: vla_system.launch.py
labs/module4-vla-robotics/vla_agent/src/: action_execution.py  llm_planning.py  local_voice_recognition.py  vla_agent.py  voice_command_interface.py
my-humanoid-book/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
my-humanoid-book/docs/: capstone-project.md  index.md  intro.md
specs/002-physical-ai-backend/: data-model.md  plan.md  quickstart.md
specs/1-humanoid-robotics-book/: plan.md  spec.md  tasks.md
(+75 files in other folders)
