<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vla_agent</name>
  <version>0.0.1</version>
  <description>Vision-Language-Action agent for humanoid robotics</description>
  <maintainer email="humanoid-team@example.com">Humanoid Robotics Team</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>humanoid_robot_msgs</depend>

  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>openai</exec_depend>
  <exec_depend>speech-recognition</exec_depend>
  <exec_depend>vosk</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>